# OmniRegress

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-wheels.yml  main.yml  release.yml
Test/: LassoRegression.py  LinearRegression.py  LogisticRegression.py  PolynomialRegression.py  run_tests.py  test.py  test1.py
docs/: admin.md
docs/Usage/: LassoRegression.md  LinearRegression.md  PolynomialRegression.md  RidgeRegression.md
omniregress/: __init__.py  __init__.pyi  lasso_regression.py  linear_regression.py  polynomial_regression.py
omniregress/ tests/: test_linear.py
omniregress/tests/: test_polynomial.py
src/: lasso_regression.rs  lib.rs  matrix.rs  ridge_regression.rs
wheelhouse/: omniregress-2.1.0-cp312-cp312-manylinux_2_34_x86_64.whl  omniregress-4.0.0-cp312-cp312-linux_x86_64.whl  omniregress-4.0.0-cp313-cp313-linux_x86_64.whl  omniregress-4.0.0-cp313-cp313-win_amd64.whl
